--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,35 @@
    article, aside, details, figcaption, figure, footer,header,
    hgroup, menu, nav, section { display: block; }
   </style>
+  <link rel=stylesheet href="../dist/css/styles.css">
+  <link rel=stylesheet href="../dist/css/normalize.css">
  </head>
  <body>
-  <p>Привет, мир</p>
+ <div class="container">
+     <header>
+         <div class="top">
+             <div class="left">
+                 <div class="num">8 495 748 62 61</div>
+                 <div class="time">Пн-Пт с 10 до 20</div>
+             </div>
+             <div class="center">
+                 <ul>
+                     <li><a href=""title="">Главная</a></li>
+                     <li><a href=""title="">доставка и оплата</a></li>
+                     <li><a href=""title="">гарантии</a></li>
+                     <li><a href=""title="">скидки</a></li>
+                     <li><a href=""title="">консультации</a></li>
+                 </ul>
+             </div>
+             <div class="right">
+                 <div class="enter">Войти на сайт</div>
+                 <div class="basket">
+                     <img src="img/icon.png" alt="">
+                     <span>2</span>
+                 </div>
+             </div>
+         </div>
+     </header>
+ </div>
  </body>
 </html>
