header menu and header slider added

--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,11 @@
  <div class="container">
      <header>
          <div class="top">
-             <div class="left">
+             <div class="top-col-left float-left">
                  <div class="num">8 495 748 62 61</div>
                  <div class="time">Пн-Пт с 10 до 20</div>
              </div>
-             <div class="center">
+             <nav class="top-col-center">
                  <ul>
                      <li><a href=""title="">Главная</a></li>
                      <li><a href=""title="">доставка и оплата</a></li>
@@ -29,8 +29,8 @@
                      <li><a href=""title="">скидки</a></li>
                      <li><a href=""title="">консультации</a></li>
                  </ul>
-             </div>
-             <div class="right">
+             </nav>
+             <div class="top-col-right float-right">
                  <div class="enter">Войти на сайт</div>
                  <div class="basket">
                      <img src="img/icon.png" alt="">
@@ -38,6 +38,24 @@
                  </div>
              </div>
          </div>
+          <h1 class="site-header">Lovelyshops.com</h1>
+          <nav class="products">
+              <ul class="products-menu">
+                  <li><a href="">Бренды</a></li>
+                  <li><a href="">для волос</a></li>
+                  <li><a href="">для лица</a></li>
+                  <li><a href="">для рук</a></li>
+                  <li><a href="">для ног</a></li>
+                  <li><a href="">для тела</a></li>
+                  <li><a href="">аксессуары</a></li>
+                  <li><a href="">парфюмерия</a></li>
+                  <li><a href="">для мужчин</a></li>
+                  <li><a href=""><img src="img/search.png" alt=""></a></li>
+              </ul>
+          </nav>
+          <div class="slider">
+              <img src="img/1_02.jpg" alt="">
+          </div>
      </header>
  </div>
  </body>
