коммит перед выгрузкой на сервер

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
   <!--[if IE]>
    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <link rel=stylesheet href="../dist/css/normalize.css">
-  <link rel=stylesheet href="../dist/css/styles.css">
+  <link rel=stylesheet href="css/normalize.css">
+  <link rel=stylesheet href="css/styles.css">
  </head>
  <body>
  <div class="container">
@@ -53,6 +53,22 @@
               <img src="img/1_02.jpg" alt="">
           </div>
      </header>
+     <main>
+         <section class="intro">
+             <div class="intro_item">
+                 <h3 class="intro_header intro_header-gold">Популярные бренды</h3>
+                 <a href=""><img src="img/background.jpg" alt=""></a>
+             </div>
+             <div class="intro_item">
+                 <h3 class="intro_header intro_header-black">Уход за волосами</h3>
+                 <a href=""><img src="img/background1.jpg" alt=""></a>
+             </div>
+             <div class="intro_item">
+                 <h3 class="intro_header intro_header-white">Товары для мужчин</h3>
+                 <a href=""><img src="img/product.jpg" alt=""></a>
+             </div>
+         </section>
+     </main>
  </div>
  </body>
 </html>
