--- a/src/index.html
+++ b/src/index.html
@@ -56,16 +56,23 @@
      <main>
          <section class="intro">
              <div class="intro_item">
-                 <h3 class="intro_header intro_header-gold">Популярные бренды</h3>
-                 <a href=""><img src="img/background.jpg" alt=""></a>
+                 <a href="">
+                    <h3 class="intro_header intro_header-gold">Популярные <br/> бренды</h3><img src="img/background.jpg" alt="">
+                    <button></button>
+                 </a>
              </div>
              <div class="intro_item">
-                 <h3 class="intro_header intro_header-black">Уход за волосами</h3>
-                 <a href=""><img src="img/background1.jpg" alt=""></a>
+                 <a href="">
+                     <h3 class="intro_header intro_header-black">Уход за <br/>волосами</h3><img src="img/background1.jpg" alt="">
+                     <button></button>
+                 </a>
              </div>
              <div class="intro_item">
-                 <h3 class="intro_header intro_header-white">Товары для мужчин</h3>
-                 <a href=""><img src="img/product.jpg" alt=""></a>
+                 <a href="">
+                     <h3 class="intro_header intro_header-white">Товары<br/> для мужчин</h3>
+                     <img src="img/product.jpg" alt="">
+                     <button></button>
+                 </a>
              </div>
          </section>
      </main>
