--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,95 @@
                  </a>
              </div>
          </section>
+         <section class="shop">
+             <div class="row">
+                 <div class="shop_item">
+                     <img src="img/product2.png" alt="">
+                     <div class="shop_info">
+                         <h3></h3>
+                         <span class="shop_description"></span>
+                         <span class="shop_price"></span>
+                         <button></button>
+                     </div>
+                 </div>
+                 <div class="shop_item">
+                     <img src="img/product3.png" alt="">
+                     <div class="shop_info">
+                         <h3></h3>
+                         <span class="shop_description"></span>
+                         <span class="shop_price"></span>
+                         <button></button>
+                     </div>
+                 </div>
+                 <div class="shop_item">
+                     <img src="img/product4.png" alt="">
+                     <div class="shop_info">
+                         <h3></h3>
+                         <span class="shop_description"></span>
+                         <span class="shop_price"></span>
+                         <button></button>
+                     </div>
+                 </div>
+             </div>
+             <div class="row">
+                 <div class="shop_item">
+                     <img src="img/product5.png" alt="">
+                     <div class="shop_info">
+                         <h3></h3>
+                         <span class="shop_description"></span>
+                         <span class="shop_price"></span>
+                         <button></button>
+                     </div>
+                 </div>
+                 <div class="shop_item">
+                     <img src="img/product6.png" alt="">
+                     <div class="shop_info">
+                         <h3></h3>
+                         <span class="shop_description"></span>
+                         <span class="shop_price"></span>
+                         <button></button>
+                     </div>
+                 </div>
+                 <div class="shop_item">
+                     <img src="img/product7.png" alt="">
+                     <div class="shop_info">
+                         <h3></h3>
+                         <span class="shop_description"></span>
+                         <span class="shop_price"></span>
+                         <button></button>
+                     </div>
+                 </div>
+             </div>
+             <div class="row">
+                 <div class="shop_item">
+                     <img src="img/product8.png" alt="">
+                     <div class="shop_info">
+                         <h3></h3>
+                         <span class="shop_description"></span>
+                         <span class="shop_price"></span>
+                         <button></button>
+                     </div>
+                 </div>
+                 <div class="shop_item">
+                     <img src="img/product9.png" alt="">
+                     <div class="shop_info">
+                         <h3></h3>
+                         <span class="shop_description"></span>
+                         <span class="shop_price"></span>
+                         <button></button>
+                     </div>
+                 </div>
+                 <div class="shop_item">
+                     <img src="img/product10.png" alt="">
+                     <div class="shop_info">
+                         <h3></h3>
+                         <span class="shop_description"></span>
+                         <span class="shop_price"></span>
+                         <button></button>
+                     </div>
+                 </div>
+             </div>
+         </section>
      </main>
  </div>
  </body>
