--- a/src/index.html
+++ b/src/index.html
@@ -80,91 +80,173 @@
                  <div class="shop_item">
                      <img src="img/product2.png" alt="">
                      <div class="shop_info">
-                         <h3></h3>
-                         <span class="shop_description"></span>
-                         <span class="shop_price"></span>
-                         <button></button>
+                         <h3>Cloud Nine Touch</h3>
+                         <span class="shop_description">Сенсорный стайлер для выпрямления волос</span>
                      </div>
+                     <span class="shop_price">13 216 руб</span>
+                     <button></button>
                  </div>
                  <div class="shop_item">
                      <img src="img/product3.png" alt="">
                      <div class="shop_info">
-                         <h3></h3>
-                         <span class="shop_description"></span>
-                         <span class="shop_price"></span>
-                         <button></button>
+                         <h3>Charge Up Thickening Shampoo</h3>
+                         <span class="shop_description">Шампунь для нормальных и тонких волос, 250 мл</span>
                      </div>
+                     <span class="shop_price">8 650 руб</span>
+                     <button></button>
                  </div>
                  <div class="shop_item">
                      <img src="img/product4.png" alt="">
                      <div class="shop_info">
-                         <h3></h3>
-                         <span class="shop_description"></span>
-                         <span class="shop_price"></span>
-                         <button></button>
+                         <h3>The activator density and density</h3>
+                         <span class="shop_description">Активатор густоты и плотности волос DENSIFIQUE для женщин</span>
                      </div>
+                     <span class="shop_price">10 560 руб</span>
+                     <button></button>
                  </div>
              </div>
              <div class="row">
                  <div class="shop_item">
                      <img src="img/product5.png" alt="">
                      <div class="shop_info">
-                         <h3></h3>
-                         <span class="shop_description"></span>
-                         <span class="shop_price"></span>
-                         <button></button>
+                         <h3>Cloud Nine Touch</h3>
+                         <span class="shop_description">Сенсорный  стайлер для выпрямления волос</span>
                      </div>
+                     <span class="shop_price">13 216 руб</span>
+                     <button></button>
                  </div>
                  <div class="shop_item">
                      <img src="img/product6.png" alt="">
                      <div class="shop_info">
-                         <h3></h3>
-                         <span class="shop_description"></span>
-                         <span class="shop_price"></span>
-                         <button></button>
+                         <h3>Charge Up Thickening Shampoo</h3>
+                         <span class="shop_description">Шампунь для нормальных и тонких волос, 250 мл</span>
                      </div>
+                     <span class="shop_price">8 650 руб</span>
+                     <button></button>
                  </div>
                  <div class="shop_item">
                      <img src="img/product7.png" alt="">
                      <div class="shop_info">
-                         <h3></h3>
-                         <span class="shop_description"></span>
-                         <span class="shop_price"></span>
-                         <button></button>
+                         <h3>The activator density and density</h3>
+                         <span class="shop_description">Активатор густоты и плотности волос DENSIFIQUE для женщин</span>
                      </div>
+                     <span class="shop_price">10 560 руб</span>
+                     <button></button>
                  </div>
              </div>
              <div class="row">
                  <div class="shop_item">
                      <img src="img/product8.png" alt="">
                      <div class="shop_info">
-                         <h3></h3>
-                         <span class="shop_description"></span>
-                         <span class="shop_price"></span>
-                         <button></button>
+                         <h3>Cloud Nine Touch</h3>
+                         <span class="shop_description">Сенсорный  стайлер для выпрямления волос</span>
                      </div>
+                     <span class="shop_price">13 216 руб</span>
+                     <button></button>
                  </div>
                  <div class="shop_item">
                      <img src="img/product9.png" alt="">
                      <div class="shop_info">
-                         <h3></h3>
-                         <span class="shop_description"></span>
-                         <span class="shop_price"></span>
-                         <button></button>
+                         <h3>Charge Up Thickening Shampoo</h3>
+                         <span class="shop_description">Шампунь для нормальных и тонких волос, 250 мл</span>
                      </div>
+                     <span class="shop_price">8 650 руб</span>
+                     <button></button>
                  </div>
                  <div class="shop_item">
                      <img src="img/product10.png" alt="">
                      <div class="shop_info">
-                         <h3></h3>
-                         <span class="shop_description"></span>
-                         <span class="shop_price"></span>
-                         <button></button>
+                         <h3>The activator density and density</h3>
+                         <span class="shop_description">Активатор густоты и плотности волос DENSIFIQUE для женщин</span>
+                     </div>
+                     <span class="shop_price">10 560 руб</span>
+                     <button></button>
+                 </div>
+             </div>
+             <div class="row">
+                <div class="shop_item">
+                     <img src="img/product11.png" alt="">
+                     <div class="shop_info">
+                         <h3>Beauty Style</h3>
+                         <span class="shop_description">Маска для рук смягчающая питательная с эффектом скраба</span>
+                     </div>
+                     <span class="shop_price">1 560 руб</span>
+                     <button></button>
+                 </div>
+                 <div class="shop_card">
+                     <img src="img/1_05.jpg" alt="">
+                     <div class="shop_card_description">
+                         <h3>Интернет-магазин профессиональной косметики</h3>
+                         <p>Дорогой посетитель, мы рады пригласить Вас в прекрасный мир высококачественной и профессиональной косметики!</p>
+                         <p>На просторах нашего магазина вас ждет обширный выбор продукции для лица, тела, рук, ногтей, волос, различные эксклюзивные обертывания. </p>
                      </div>
                  </div>
              </div>
          </section>
      </main>
+     <footer>
+         <div>
+             <div class="footer_column">
+                 <span>© 2010-2016</span>
+                 <span> Интернет-магазин                профессиональной косметики. Все права защищены.</span>
+             </div>
+             <div class="footer_column">
+                 <h3 class="footer_column_header">о нас</h3>
+                 <ul>
+                     <li><a href="">О магазине</a></li>
+                     <li><a href="">Контакты</a></li>
+                 </ul>
+             </div>
+         </div>
+         <div>
+             <div class="footer_column">
+                 <h3 class="footer_column_header">Помощь</h3>
+                 <ul>
+                     <li><a href="">Доставка и оплата</a></li>
+                     <li><a href="">Статус заказа</a></li>
+                     <li><a href="">Консультации</a></li>
+                     <li><a href="">Скидки</a></li>
+                     <li><a href="">Оптовым покупателям</a></li>
+                 </ul>
+             </div>
+             <div class="footer_column">
+                 <h3 class="footer_column_header">Информация</h3>
+                 <ul>
+                     <li><a href="">Подлинность продукции</a></li>
+                     <li><a href="">Конфиденциальность</a></li>
+                     <li><a href="">Договор оферты</a></li>
+                     <li><a href="">Правила продажи</a></li>
+                     <li><a href="">Поставщикам</a></li>
+                 </ul>
+             </div>
+         </div>
+         <div>
+             <div class="footer_column">
+                 <h3 class="footer_column_header">партнеры</h3>
+                 <ul>
+                     <li>
+                        <a href="">
+                             <img src="img/logo.png" alt="">
+                         </a>
+                     </li>
+                     <li>
+                         <a href="">
+                             <span>Подарочные</span>
+                             <span>сертификаты</span>
+                         </a>
+                     </li>
+                 </ul>
+             </div>
+             <div class="footer_column">
+                 <h3 class="footer_column_header">мы в соцсетях</h3>
+                 <ul class= footer_column_media>
+                     <li><a href=""><img src="img/instagram.png" alt=""></a></li>
+                     <li><a href=""><img src="img/vkontacte.png" alt=""></a></li>
+                     <li><a href=""><img src="img/facebook.png" alt=""></a></li>
+                 </ul>
+             </div>
+         </div>
+     </footer>
  </div>
  </body>
 </html>
