--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
  </head>
  <body>
  <div class="container">
+    <div class="main_menu_button"></div>
      <header>
          <div class="top">
              <div class="top-col-left float-left">
@@ -36,6 +37,11 @@
          </div>
           <h1 class="site-header">Lovelyshops.com</h1>
           <nav class="products">
+             <div class="nav_button nav_button-open">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+             </div>
               <ul class="products-menu">
                   <li><a href="">Бренды</a></li>
                   <li><a href="">для волос</a></li>
@@ -50,7 +56,19 @@
               </ul>
           </nav>
           <div class="slider">
-              <img src="img/1_02.jpg" alt="">
+              <img class="slide" src="img/1_02.jpg" alt="">
+              <div class="slider_description">
+                  <h2>Kerastase</h2>
+                  <span>Подарите новую жизнь</span>
+                  <span>вашим волосам</span>
+                  <img src="img/slider.png" alt="">
+              </div>
+              <div class=slider_index>
+                  <ul>
+
+                  </ul>
+              </div>
+              <button class="control next"></button>
           </div>
      </header>
      <main>
